# PathoML

./: .gitignore  AGENTS.md  GML_SUMMARY.md  main.py  pyproject.toml  pytest.ini
.claude/: CLAUDE.md  settings.json
.github/: copilot-instructions.md
PathoML/: DESIGN.md  registry.py
PathoML/config/: DESIGN.md  __init__.py  config.py  defaults.py
PathoML/data/: DESIGN.md  (+4 more)
distillation/: CLAUDE.md  DESIGN.md  __init__.py  dataset.py  losses.py  manifest.py  trainer.py
examples/: DESIGN.md  cv_multimodal.py  cv_unimodal.py  full_train.py
figure/: DESIGN.md  plot_confusion_matrix.py  plot_distillation_roc.py  plot_modality_comparison.py  plot_registered_teacher_comparison.py
runs/: DESIGN.md  PLAN.md  common.py  results_log.txt  run_bs32_and_analyze.py  run_concat_HE_CD20_CD3_Ki67_gated_mlp.py  run_concat_HE_CD20_CD3_Ki67_mlp.py  run_concat_HE_CD20_CD3_mlp.py  run_concat_HE_CD20_linear.py  run_concat_HE_CD20_mlp.py  run_unimodal_CD20_abmil.py  run_unimodal_CD20_linear.py  run_unimodal_HE_abmil.py  run_unimodal_HE_linear.py  tuning_log.txt
scripts/: DESIGN.md  analyze_distillation_mechanisms.py  analyze_rkd_tga_diagnostics.py  hard_cases_for_review.csv  hpo_search.py  multi_stain_fusion.py  promote_teacher_winner.py  reorganize_features.py  rkd_tga_diagnostic.md  run_bs32_and_analyze.py
teacher/: CLAUDE.md  DESIGN.md  __init__.py
tests/: conftest.py  test_config.py  test_cross_validator.py  test_dataset_dataloader.py  test_dataset_utils.py  test_full_dataset_trainer.py  test_models.py  test_patient_aggregation.py  test_registry.py  test_trainer_utils.py
(+155 files in other folders)
